Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8258788
incorrect response to change in window insets [lanai]
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
17
Affects Version/s:
17
Component/s:
client-libs
Labels:
lanai
lanai-to-default
Subcomponent:
2d
Resolved In Build:
b18
Description
See test program. Compare with JDK 15.
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
TestWindowInsets.java
1 kB
2020-12-21 07:26
Issue Links
links to
Commit
openjdk/jdk/714ae54f
Review
openjdk/jdk/3308
Review
openjdk/jdk/3390
Activity
People
Assignee:
Alexey Ushakov
Reporter:
Alan Snyder
Votes
:
0
Vote for this issue
Watchers:
6
Start watching this issue
Dates
Created:
2020-12-21 07:26
Updated:
2025-01-21 14:33
Resolved:
2021-04-12 09:29