8258788: incorrect response to change in window insets [lanai]

Dynamically change MTLLayer insets depending on FULL_WINDOW_CONTENT property. MTLLayer.h header cleanup.