src/java.desktop/macosx/classes/sun/lwawt/LWWindowPeer.java
@@ -737,6 +737,9 @@ public class LWWindowPeer
             handleMove(x, y, true);
         }
         if (tResized || pResized || invalid || isNewDevice) {
+            if (CGraphicsDevice.usingMetalPipeline() && invalid) {
+                replaceSurfaceData();
+            }
             handleResize(w, h, true);
             repaintPeer();
         }
