src/java.desktop/macosx/native/libawt_lwawt/java2d/metal/MTLBlitLoops.m
@@ -37,6 +37,7 @@
 #include "IntArgbPre.h"
 
 #import <Accelerate/Accelerate.h>
+#import "common.h"
 
 #ifdef DEBUG
 #define TRACE_ISOBLIT
