src/java.desktop/macosx/native/libawt_lwawt/java2d/metal/MTLContext.m
@@ -32,6 +32,7 @@
 #include "MTLRenderQueue.h"
 #import "MTLSamplerManager.h"
 #import "MTLStencilManager.h"
+#import "common.h"
 
 
 extern jboolean MTLSD_InitMTLWindow(JNIEnv *env, MTLSDOps *mtlsdo);
